# Docstring-Generator

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  app.py  data_processor.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  temp_upload.py
.github/workflows/: ci-docs.yml  ci-docs.yml.txt
api_ref/: index.html
configuration/: index.html
contributing/: index.html
docs/: api_ref.md  benchmarks.md  changelog.md  configuration.md  contributing.md  example.md  faq.md  index.md  license.md  usage.md
license/: index.html
search/: search_index.json
site/benchmarks/: index.html
site/changelog/: index.html
site/example/: index.html
site/faq/: index.html
site/stylesheets/: extra.css
site/usage/: index.html
src/docstring_generator/: ERROR_1.py  SUCCESS_FILE.py  app.py  complex_cases.py  data_processor.py  syntax_error.py
src/docstring_generator_aparna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stylesheets/: extra.css
