[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docstring-generator-aparna"  # Changed from atharva to aparna
version = "0.1.0"
description = "Aparna's AI-powered docstring generator and validator library"
dependencies = [
    "streamlit",
    "pydocstyle",
    "toml",
    "openai"
]

[project.scripts]
docstring-gui = "docstring_generator.app:main"

[tool.docstring-generator]
style = "numpy"
include = ["src/**/*.py"]
exclude = ["**/__init__.py", "tests/"]
coverage_threshold = 90
autofix = true

[tool.pydocstyle]
convention = "numpy"
# This tells the tool to ignore the tests directory entirely
match-dir = "(?!tests).*"
# This ensures it only checks relevant python files
match = "(?!temp_upload).*.py"
add-ignore = ["D100", "D101", "D102", "D103", "D104"]